fix: sonarq issue